--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,6 +14,8 @@
 }
 
 .showMore {
-  display: flex;
-  margin: 40px auto;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%); 
+  margin: 40px;
 }
